--- a/web-site/appsettings.json
+++ b/web-site/appsettings.json
@@ -6,5 +6,8 @@
     }
   },
   "AllowedHosts": "*",
-  "Urls": "http://*:8842"
+  "Urls": "http://*:8842",
+  "ConnectionStrings": {
+    "CustomSqlServer": "Server=custom-sql-server,1438;Database=YourDatabaseName;User Id=sa;Password=YourStrongPassword99@;"
+  }
 }
