--- a/web-site/dockerfile
+++ b/web-site/dockerfile
@@ -3,10 +3,8 @@ WORKDIR /App
 
 # Copy everything
 COPY . ./
-# Restore as distinct layers
-RUN dotnet restore
 # Build and publish a release
-RUN dotnet publish -c Release -o out
+RUN dotnet publish web-site.csproj -c Release -o out
 
 # Build runtime image
 FROM mcr.microsoft.com/dotnet/aspnet:8.0
